[JBPAPP-6778] create one off patch branch